# sherlock

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
backend/: .dockerignore  .gitignore  .importlinter  CLAUDE.md  Dockerfile  TODO.md  pyproject.toml
backend/scripts/: evaluate_accuracy.py  fit_model.py  generate_confusion_matrix.py  paths.py  profile_response_model.py  refresh_synthetic_data.py  run_analysis.py  run_model_diagnostics.py
backend/src/analysis_service/: __init__.py
backend/src/analysis_service/api/: __init__.py  __main__.py  app.py  config.py  dependencies.py  errors.py  jobs.py  progress.py  routes.py  schemas.py
backend/src/analysis_service/core/: __init__.py  constants.py  data.py  data_models.py  paths.py  utils.py
backend/src/analysis_service/detection/: __init__.py  correction.py  data_models.py  exceptions.py  pipeline.py  similarity.py
backend/src/analysis_service/evaluation/: __init__.py  data_models.py  injection.py  metrics.py  plotting.py  runner.py
backend/src/analysis_service/irt/: __init__.py  diagnostics.py  response_models.py  sampling.py
backend/src/analysis_service/irt/estimation/: __init__.py  abilities.py  base.py  config.py  constants.py  data_models.py  enums.py  estimator.py  gradients.py  parameters.py  quadrature.py  starting_values.py
backend/src/analysis_service/irt/estimation/nrm/: __init__.py  estimator.py  gradients.py  parameters.py
backend/src/analysis_service/synthetic_data/: __init__.py  config.py  data_models.py  generators.py  missingness.py  parameters.py  presets.py  questions.py  sampling.py  utils.py  validation.py
backend/src/analysis_service/synthetic_data/params/: README.md  baseline.yaml  bimodal.yaml  large_scale.yaml
backend/tests/integration/api/: test_api_endpoints.py
backend/tests/integration/detection/: test_detection_pipeline.py
backend/tests/integration/irt/: test_nrm_parameter_recovery.py
backend/tests/integration/synthetic_data/: test_parameter_recovery.py
backend/tests/unit/api/: test_schemas.py
backend/tests/unit/core/: test_core_utils.py
backend/tests/unit/detection/: test_correction.py  test_pipeline.py  test_similarity.py
backend/tests/unit/evaluation/: test_data_models.py  test_injection.py  test_metrics.py  test_runner.py
backend/tests/unit/irt/: test_response_models.py
backend/tests/unit/irt/estimation/: test_data_models.py  test_gradients.py  test_nrm_parameters.py  test_quadrature.py
backend/tests/unit/synthetic_data/: test_config.py  test_generators.py  test_missingness.py  test_parameters.py  test_questions.py  test_sampling.py  test_utils.py  test_validation.py
frontend/: .gitignore  README.md
