[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-backend"
version = "0.1.0"
description = "A backend service that detects cheating on multiple choice exams."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.1.4",
    "pydantic>=2.0.0",
    "typer>=0.16.1",
    "pytest>=8.4.1",
    "scipy>=1.17.0",
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "import-linter>=2.9",
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]
build = [
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.mypy]
# Mypy configuration matching the typecheck.py script
python_version = "3.13"
strict = true
ignore_missing_imports = true
show_error_codes = true
show_error_context = true

# Additional mypy settings for better development experience
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Files and paths
files = ["src/"]
exclude = [
    "build/",
    "__pycache__/",
    ".mypy_cache/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Asynchronous tests",
]

[tool.ruff]
target-version = "py313"
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by line-length
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools]
package-dir = {"" = "src"}
