[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sherlock-backend"
version = "0.1.0"
description = "A backend service that detects cheating on multiple choice exams."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.1.4",
    "pydantic>=2.0.0",
    "typer>=0.16.1",
    "pytest>=8.4.1",
    "scipy>=1.17.0",
    "omegaconf>=2.3.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.0",
    "import-linter>=2.9",
    "mypy>=1.19.1",
    "prek>=0.2.30",
    "ruff>=0.14.13",
    "scipy-stubs",
]
build = [
    "pyinstaller>=6.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.mypy]
# Mypy configuration matching the typecheck.py script
python_version = "3.13"
strict = true
ignore_missing_imports = false
show_error_codes = true
show_error_context = true

# Additional mypy settings for better development experience
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Files and paths
files = ["src/"]
mypy_path = ["src"]
exclude = [
    "build/",
    "__pycache__/",
    ".mypy_cache/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src"]
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "asyncio: Asynchronous tests",
]

[tool.ruff]
target-version = "py313"
line-length = 79

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by line-length
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
